# chartmate

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  playwright-ct.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: architecture.md  database.md  integrations.md  user-flows.md  youtube-integration.md
docs/specs/: 2026-04-27-goal-ref-pickers-plan.md  2026-04-27-lessons-curriculum-design.md  2026-04-27-lessons-curriculum-plan.md
docs/superpowers/plans/: 2026-04-07-playbook-practice-mode.md  2026-04-14-chartmate-tab-skill.md
docs/superpowers/specs/: 2026-04-07-playbook-practice-mode-design.md  2026-04-14-chartmate-tab-skill-design.md
playwright/: index.html  index.tsx
public/rudiments/charts/: 06-double-stroke-open-roll.chart  21-flam.chart  22-flam-accent.chart  30-inverted-flam-tap.chart
scripts/: generate-rudiment-charts.ts  install-ios.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  ignition-auth.json  ignition-download.json
src-tauri/icons/: icon.icns
src-tauri/src/: ignition.rs  lib.rs  main.rs  psarc.rs  stems.rs  webdav.rs
src/components/: AlphaTabPlayhead.tsx  BottomNav.tsx  BrowseCharts.tsx  ChartSectionSnippet.tsx  CompareChartsToLocal.tsx  CompareView.tsx  FirstLaunchSetup.tsx  IgnitionLoginDialog.tsx  Layout.tsx  PatternVocabularyPanel.tsx  ProgressionPill.tsx  SettingsDialog.tsx  SongLearningPanel.tsx  SongProgressPanel.tsx  SongsDownloader.tsx  SongsTable.tsx  SpotifyHistoryImportCard.tsx  SpotifyLibraryExplorer.tsx  SpotifyLibrarySidebar.tsx  SpotifyStatusDialog.tsx  SpotifyTableDownloader.tsx  StemMixerPanel.tsx  TabSnippet.tsx  TabsBrowseTab.tsx  TrackDetailDrawer.tsx  WebDavSyncPanel.tsx  YouTubePlayer.tsx
src/components/calendar/: CalendarGrid.tsx  SessionChip.tsx
src/components/programs/: AddGoalForm.tsx  (+7 more)
src/contexts/: ActivityTrackerContext.tsx  LayoutContext.tsx  SidebarContext.tsx  SpotifyAuthContext.tsx  SyncContext.tsx
src/hooks/: usePdfViewer.ts  usePlaybackEngine.ts  usePrint.ts  useScoreIO.ts  useSectionPatterns.ts  useSpotifyHistory.ts  useStemPlayer.ts  useTabSearch.ts  useTrackResults.ts  useYoutubeSync.ts
src/lib/: alphaTabTheme.ts  chart-persistent-store.ts  chart-storage.ts  format-utils.ts  nav-tabs.ts  patternVocabulary.ts  platform.ts  search-encore.ts  setlist-order.ts  sheet-music-cache.ts  songs-folder.ts  soundfont-store.ts  spotify-auth.ts  store.ts  sync-events.ts  sync-state.ts  ui-utils.ts  useChartLoader.ts  useLocalStorage.ts  utils.ts  webdav-sync.ts  youtube-sync.ts  youtube-utils.ts
src/pages/: BrowsePage.tsx  DrumsHubPage.tsx  Home.tsx  LibraryPage.tsx  SetlistsPage.tsx  SheetMusicPage.tsx  SheetMusicSongPage.tsx  SpotifyPage.tsx  StemPlayerPage.tsx  UpdatesPage.tsx
(+748 files in other folders)
