[package]
name = "chartmate"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chartmate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-store = "2.4.2"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-http = "2.5.7"
tauri-plugin-localhost = "2"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
flate2 = "1"
aes = "0.8"
ctr = "0.9"
cfb-mode = "0.8"
cipher = "0.4"
ww2ogg = "0.1.0"
symphonia = { version = "0.5.5", features = ["ogg", "vorbis"] }
url = "2"
tokio = { version = "1", features = ["rt", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
base64 = "0.22"
quick-xml = { version = "0.36" }
uuid = { version = "1", features = ["v4"] }
sha2 = { version = "0.10" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

